Change name to "Grade Scaler"

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Grade Schemer",
-  "name": "Grade Schemer - THE exam grading calculation app",
+  "short_name": "Grade Scaler",
+  "name": "Grade Scaler - THE exam grading calculation app",
   "icons": [
     {
       "src": "favicon.ico",
