--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "chart.js": "^3.5.0",
-    "next": "10.x",
+    "next": "^12.0.1",
     "next-seo": "^4.26.0",
-    "react": "17.x",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-chartjs-2": "^3.0.4",
-    "react-dom": "17.x",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
   }
 }
